Timeline to prototypal inheritance, fix overflow.

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
 
 .resizer-vertical {
   height: 20px;
-  left: 10px;
+  left: 0;
   right: 0;
   cursor: row-resize;
 }
@@ -67,22 +67,29 @@ body {
   flex-direction: column;
 }
 
-#messager {
+#messagerContainer {
+  /* Must be relative to anchor resizer. */
   position: relative;
-  font-family: monospace;
-  font-size: 150%;
-  /* overflow: auto; */
+
   background-color: #333333;
   color: #CCCCCC;
   height: 200px;
+}
+
+#messager {
+  font-family: monospace;
+  font-size: 150%;
+  overflow: auto;
+  width: 100%;
+  height: 100%;
   padding: 10px;
 }
 
 #editor {
+  /* border: 2px solid red; */
   flex: 1;
   width: 100%;
   min-height: 200px;
-  overflow: visible;
 }
 
 #svg {
